# sl-sh-proc-macros

./: Cargo.toml  README.md
bridge_macros/src/: dialect.rs  lib.rs
bridge_macros/src/dialect/: sl_sh.rs
src/: dialect.rs  lib.rs
src/dialect/: sl_sh.rs  slosh.rs
